# Solitaire-Rust

./: .gitignore  LICENSE  README.md
solitaire-wasm/: Cargo.toml
solitaire-wasm/src/: lib.rs
solitaire-wasm/static/: index.html  style.css
