[package]
name = "solitaire-wasm"
version = "0.1.0"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement", "MouseEvent", "console"] }
rand = "0.8.5"

[dependencies.getrandom]
version = "0.2.5"
features = ["js"]

[lib]
crate-type = ["cdylib"]
